Wed Nov 16 23:24:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (static-ruby): overridable.

	* ext/extmk.rb (parse_args): force to link extensions statically only
	  if static is given for extstatic.

	* ext/extmk.rb (RUBY, RUBYW): overridable.

Wed Nov 16 01:29:31 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/trackback.rb: added TrackBack prefix.

	* lib/rss/maker/trackback.rb: ditto.

Wed Nov 16 01:26:13 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::VERSION): 0.1.5 -> 0.1.6.

	* test/rss/test_version.rb (RSS::TestVersion#test_version): ditto.

Tue Nov 15 23:54:24 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_load_ok): eaccess() returns 0 on success.
	  fixed: [ruby-dev:27713]

Tue Nov 15 16:36:03 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c (rb_ary_fill): previous commit disabled this usage:

	    a = [0,1,2,3,4,5,6,7,8,9]
	    a.fill {|i| a[i] * 10} #=> [nil, nil, ...., nil]

	  previous commit has advantange for early garbage collection, but
	  potensially would break some script. so I reverted behavior.

Tue Nov 15 16:15:23 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (file_load_ok): use eaccess() instead of actually opening
	  the file.  [ruby-talk:156378]

	* lib/jcode.rb (String::reverse): add new methods.
	  [ruby-list:41245]

Tue Nov 15 15:49:34 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c (rb_ary_fill): tail elements were vanished when the middle
	  part of array was filled. (ie: [0,1,2,3,4].fill(-1,2,1) => [0,1,-1])

	* test/ruby/test_array.rb (test_fill): added.

Tue Nov 15 14:39:16 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_fill): should adjust array length correctly when
	  an array is expanded in the fill process.  [ruby-core:06625]

Mon Nov 14 23:49:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_readlink): ERANGE will occur only on GPFS.
	  [ruby-dev:27699]
