@@ -407,9 +407,7 @@ module RSS
       previous = @last_element
       next_element = klass.send(:new, *args)
       next_element.do_validate = @do_validate
-      prefix = ""
-      prefix << "#{klass.required_prefix}_" if klass.required_prefix
-      previous.funcall(:set_next_element, prefix, tag_name, next_element)
+      previous.funcall(:set_next_element, tag_name, next_element)
       @last_element = next_element
       @proc_stack.push Proc.new { |text, tags|
         p(@last_element.class) if DEBUG
